--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   text-indent: -9999px;
   width: 100px;
   height: 82px;
-  background: url(./cloud2labs.svg);
+  background: url(./Cloud2_labs.svg);
   background-size: 100px 82px;
 }
 </style>
 </head>
 
 <body style="height:100%;background-color:#ccc>
-<img src="./cloud2labs.svg" alt="Cloud2 Labs">
+<img src="./Cloud2_labs.svg" alt="Cloud2 Labs">
 <a href="/" class="logo">Cloud2 Labs</a>
 </body>
 
