--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
 <style>
 .logo {
   display: block;
-  text-indent: -9999px;
+  /*text-indent: -9999px;
   width: 100px;
-  height: 82px;
+  height: 82px;*/
   background: url(./Cloud2_labs.svg);
   background-size: 200px 164px;
+  margin-left: auto;
+  margin-right: auto
 }
 </style>
 </head>
